[package]
name = "spl-stake-pool-example"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5"
clap = { version = "3.2.23", features = ["derive"] }
dirs = "5.0"
solana-clap-v3-utils = "2.1" 
solana-client = "2.0.18"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-native-token = "2.2"
solana-message = "2.2"
solana-sdk = "2.0.18"
spl-associated-token-account-client = "2.0"
spl-stake-pool = "2.0"
spl-token = "7.0"